--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "mocha": "npx mocha",
+    "mocha-junit": "npx mocha --reporter node_modules/mocha-junit-reporter --reporter-options jenkinsMode=1,outputs=1,mochaFile=results/mocha-test-results.xml"
+  },
   "devDependencies": {
     "chai": "^5.0.3",
     "mocha": "^10.2.0",
