--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "agility-game-home",
+  "version": "1.0.0",
+  "type": "module", 
   "scripts": {
     "mocha": "npx mocha",
     "mocha-junit": "npx mocha --reporter node_modules/mocha-junit-reporter --reporter-options jenkinsMode=1,outputs=1,mochaFile=results/mocha-test-results.xml"
