--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,12 @@ test:
   stage: test
   script:
     - echo "Hello world"
-    - npm ci
+    - npm ci --cache .npm --prefer-offline
     - npm run mocha
+
+  cache:
+    - key:
+        files:
+          - package-lock.json
+      paths:
+        - .npm/
