--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Docker compose files
+docker-compose.dev.yml
+docker-compose.prod.yml
