--- a/gateway/Dockerfile.dev
+++ b/gateway/Dockerfile.dev
@@ -12,4 +12,23 @@ ARG PROXY_PORT
 ENV HTTP_PROXY="http://${PROXY_USER}:${PROXY_PASSWORD}@${PROXY_FQDN}:${PROXY_PORT}"
 ENV HTTPS_PROXY="http://${PROXY_USER}:${PROXY_PASSWORD}@${PROXY_FQDN}:${PROXY_PORT}"
 
-# More ...
+# set working directory
+WORKDIR /app
+
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /app/node_modules/.bin:$PATH
+
+# production environment
+FROM ${IMAGE_REPOSITORY}${IMAGE_REPOSITORY_DIVISION}nginx:stable-alpine
+
+# install build
+COPY --from=build /app/build /usr/share/nginx/html
+
+# if using React Router
+COPY nginx/nginx.conf.development /etc/nginx/conf.d/default.conf
+
+# expose port
+EXPOSE 80
+
+# start app
+CMD ["nginx", "-g", "daemon off;"]
